--- a/mosdns/Dockerfile
+++ b/mosdns/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine as builder
 
 WORKDIR /usr/src
 RUN apk update -f && apk upgrade
-RUN apk add libc-dev git go upx make byacc musl-dev gcc libevent-dev openssl-dev expat-dev hiredis-dev
+RUN apk add libc-dev git go upx make byacc musl gcc libevent openssl expat hiredis
 
 RUN git clone https://github.com/IrineSistiana/mosdns.git /usr/src/mosdns && cd /usr/src/mosdns && go build -o /usr/src/mosdns/mosdns
 RUN git clone https://github.com/AdguardTeam/dnsproxy.git /usr/src/dnsproxy && cd /usr/src/dnsproxy && go build -mod=vendor -o /usr/src/dnsproxy/dnsproxy
@@ -17,7 +17,7 @@ RUN upx /usr/src/mosdns/mosdns
 WORKDIR /usr/src/mosdns
 WORKDIR /usr/src/dnsproxy
 
-FROM alpine
+FROM alpine as runtime
 COPY --from=builder /usr/src/mosdns/mosdns /usr/bin/mosdns
 COPY --from=builder /usr/src/dnsproxy/dnsproxy /usr/bin/dnsproxy
 COPY --from=builder /usr/local/sbin/unbound /usr/bin/unbound
