--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         cd ./smartdns
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
-    - name: docker smartdns
+    - name: docker coredns
       run: |
         cd ./coredns
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/coredns --platform linux/arm64,linux/amd64 . --push
